# undergrad-thesis

./: .env.example  .env.prod.example  .gitignore  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_project_files.py  0003_sources.py  0004_chat.py  0005_source_citation.py  0006_rate_counters.py  0007_user_llm.py
backend/app/: config.py  main.py
backend/app/agent/: ask.py  llm.py  moderation.py  qa.py
backend/app/api/: auth.py  chat.py  deps.py  files.py  projects.py  sources.py
backend/app/core/: aws.py  exceptions.py  logging.py  ratelimit.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  chat.py  file.py  project.py  rate_counter.py  source.py  user.py
backend/app/rag/: chunk.py  embeddings.py  extract.py  ingest.py  metadata.py  qdrant.py  retrieve.py
backend/app/schemas/: auth.py  chat.py  file.py  project.py  source.py
backend/app/services/: auth.py  chat.py  cognito.py  files.py  latex.py  projects.py  sources.py  users.py
backend/app/storage/: __init__.py  base.py
backend/scripts/: dev-entrypoint.sh  prod-entrypoint.sh
backend/tests/: conftest.py  fakes.py  test_ask.py  test_auth_api.py  test_chat_api.py  test_cognito_errors.py  test_extract.py  test_files_api.py  test_latex.py  test_metadata.py  test_model_selection.py  test_projects_api.py  test_ratelimit.py  test_references_tool.py  test_retrieve.py  test_security.py  test_sources_api.py  test_storage.py
(+94 files in other folders)
